1.base-orm模块功能：优化枚举类，增加部分注解，调整包结构。

--- a/x-webalbum/pom.xml
+++ b/x-webalbum/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.wen</groupId>
+            <groupId>com.wen.baseorm</groupId>
             <artifactId>base-orm</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
