--- a/base-orm/pom.xml
+++ b/base-orm/pom.xml
@@ -5,12 +5,15 @@
 
 
     <parent>
-        <artifactId>server-api</artifactId>
-        <groupId>com.wen</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.6.2</version>
+        <relativePath/>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.wen.baseorm</groupId>
     <artifactId>base-orm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
